--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "pg": "^8.15.6",
+    "pg-format": "^1.0.4",
     "prisma": "^6.6.0",
     "sqlite3": "^5.1.7"
   },
