--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@tiptap/extension-code": "^2.14.0",
+    "@tiptap/extension-color": "^2.14.0",
     "@tiptap/extension-image": "^2.14.0",
     "@tiptap/extension-link": "^2.14.0",
     "@tiptap/extension-text-align": "^2.14.0",
+    "@tiptap/extension-text-style": "^2.26.1",
     "@tiptap/extension-underline": "^2.14.0",
     "@tiptap/react": "^2.14.0",
     "@tiptap/starter-kit": "^2.14.0",
