--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "pg": "^8.15.6",
     "pg-format": "^1.0.4",
     "prisma": "^6.6.0",
+    "sitemap": "^9.0.0",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
