--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -9,10 +9,10 @@
 /coverage
 
 # production
-/Compilation.txt
-/Deploy.bat
-/startPrjBack.bat
-/startPrjFront.bat
+Compilation.txt
+Deploy.bat
+startPrjBack.bat
+startPrjFront.bat
 
 # misc
 .DS_Store
